@@ -1,3 +1,0 @@
-The latex-ttf-fonts package is the first part of the BaKoMa Font Collection.
-It includes 88 basic fonts of the Computer Modern font family that were
-designed by D.E.Knuth.
