@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2003/03/22 17:33:29 jmmv Exp $
-
-SHA1 (latex-ttf-fonts-0.1.tar.gz) = 8f0552e984df1227544179bfdb841600bd19877a
-Size (latex-ttf-fonts-0.1.tar.gz) = 113122 bytes
