@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1753 2003/03/23 14:30:05 lukem Exp $
+$NetBSD: CHANGES,v 1.1754 2003/03/23 14:51:26 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -1272,3 +1272,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Added transcalc-0.13 [dmcmahill 2003-03-23]
 	Updated metamail to 2.7nb1 [jmmv 2003-03-23]
 	Updated sfs to 0.7.2nb1 [lukem 2003-03-23]
+	Removed latex-ttf-fonts [jmmv 2003-03-23]
